Added users data

--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
           </div>
         </div>
       </section>
+      <div class="users">
+        <div class="clients">
+          <h6>clients</h6>
+          <p>150+</p>
+        </div>
+        <div class="project">
+          <h6>Projects</h6>
+          <p>400+</p>
+        </div>
+        <div class="happy">
+          <h6>Happy clients</h6>
+          <p>100%</p>
+        </div>
+        <div class="follower">
+          <h6>Follower</h6>
+          <p>200K</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
