--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Studio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./favi icon.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
-      <section>
+      <section class="view1">
         <div class="top">
           <img
             src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2cb2934d35c4b4c5b51da_studio-hero-p-1600.webp"
@@ -36,24 +37,56 @@
           </div>
         </div>
       </section>
-      <div class="users">
-        <div class="clients">
-          <h6>clients</h6>
-          <p>150+</p>
+      <section class="view2">
+        <div class="top">
+          <div class="element">
+            <small>Clients</small>
+            <h2>100+</h2>
+          </div>
+          <div class="element">
+            <small>Projects</small>
+            <h2>400+</h2>
+          </div>
         </div>
-        <div class="project">
-          <h6>Projects</h6>
-          <p>400+</p>
+        <div class="bottom">
+          <div class="element">
+            <small>Happy clients</small>
+            <h2>100%</h2>
+          </div>
+          <div class="element">
+            <small>Follower</small>
+            <h2>200K</h2>
+          </div>
         </div>
-        <div class="happy">
-          <h6>Happy clients</h6>
-          <p>100%</p>
+      </section>
+      <section class="view3">
+        <div class="top">
+          <img
+            src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d42ed21efba1c98e866246_studio-philosophy-p-1600.webp"
+            alt=""
+          />
         </div>
-        <div class="follower">
-          <h6>Follower</h6>
-          <p>200K</p>
+        <div class="bottom">
+          <p>Our Philosophy</p>
+          <div class="text">
+            <h1>Putting Our Clients' Success First</h1>
+            <div class="paragraph">
+              <p>
+                At our agency, we firmly believe in putting our clients' success
+                first. We are dedicated to understanding their unique goals,
+                challenges, and vision, and we tailor our services to meet their
+                specific needs.
+              </p>
+              <p>
+                Our collaborative approach ensures that our clients receive
+                personalized attention, exceptional service, and measurable
+                results, fostering long-term partnerships built on trust and
+                mutual success.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
