--- a/index.html
+++ b/index.html
@@ -87,6 +87,33 @@
           </div>
         </div>
       </section>
+      <section class="view4">
+        <div class="top">
+          <img
+            src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbdadb9a66a436b50ff_sutdio-values-p-1600.webp"
+            alt=""
+          />
+        </div>
+        <div class="bottom">
+          <p>Our Vision</p>
+          <div class="text">
+            <h1>Setting the Standard for Excellence</h1>
+            <div class="paragraph">
+              <p>
+                We are committed to setting the standard for excellence in
+                everything we do. With a relentless pursuit of quality,
+                innovation, and results, we strive to exceed expectations and
+                deliver exceptional outcomes for our clients.
+              </p>
+              <p>
+                Our team of industry experts, combined with our unwavering
+                dedication to excellence, positions us as a leader in the
+                fashion agency landscape.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
