--- a/index.html
+++ b/index.html
@@ -114,6 +114,61 @@
           </div>
         </div>
       </section>
+      <section class="view5">
+        <div class="teams">
+          <h2>Our team</h2>
+          <a href="#">
+            <i class="ri-arrow-right-up-long-line"></i> &nbsp; Find job</a
+          >
+        </div>
+      </section>
+      <section class="view6">
+        <div class="cards">
+          <div class="top">
+            <div class="icons">
+              <i class="ri-instagram-line"></i>
+            </div>
+            <div class="icons"><i class="ri-pix-line"></i></div>
+            <div class="icons">
+              <i class="ri-twitter-line"></i>
+            </div>
+          </div>
+          <div class="bottom">
+            <p>Arlene McCoy</p>
+            <p>Branding</p>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="top">
+            <div class="icons">
+              <i class="ri-instagram-line"></i>
+            </div>
+            <div class="icons"><i class="ri-pix-line"></i></div>
+            <div class="icons">
+              <i class="ri-twitter-line"></i>
+            </div>
+          </div>
+          <div class="bottom">
+            <p>Bessie Cooper</p>
+            <p>Marketing</p>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="top">
+            <div class="icons">
+              <i class="ri-instagram-line"></i>
+            </div>
+            <div class="icons"><i class="ri-pix-line"></i></div>
+            <div class="icons">
+              <i class="ri-twitter-line"></i>
+            </div>
+          </div>
+          <div class="bottom">
+            <p>Marvin McKinney</p>
+            <p>Video</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
