--- a/index.html
+++ b/index.html
@@ -169,6 +169,23 @@
           </div>
         </div>
       </section>
+      <section class="view7">
+        <div class="top">
+          <img
+            src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd34d35c31355b73d1_studio-team-p-1600.webp"
+            alt=""
+          />
+        </div>
+        <div class="bottom">
+          <p>join our team</p>
+          <div class="text">
+            <h1>Want to shape the future of Fashion?</h1>
+            <a href="#"
+              ><i class="ri-arrow-right-up-long-line"></i> &nbsp; find job</a
+            >
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
