--- a/index.html
+++ b/index.html
@@ -186,6 +186,17 @@
           </div>
         </div>
       </section>
+      <section class="view8">
+        <div class="contact">
+          <p>contact</p>
+          <div class="text">
+            <h1>Let's make your fashion brand shine</h1>
+            <a href="#"
+              >Get in Touch &nbsp; <i class="ri-arrow-right-up-long-line"></i
+            ></a>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
